# oshit

./: .gitignore  .gitmodules  .mailmap  Cargo.toml.submission  Makefile  README.md  build_usr.py  make_fs_img  user_linker.ld
hello_world/: Cargo.toml
proc0/: Cargo.toml  Makefile  linker.ld  proc0.c  sigtest.c
shell/: Cargo.toml
shell/src/: main.rs
systime_test/: Cargo.toml
systime_test/src/: main.rs
uname_test/: Cargo.toml
user_programs/fork_test/: Cargo.toml
user_programs/fork_test/.cargo/: config
user_programs/fork_test/src/: main.rs
user_programs/hello_world/: Cargo.toml
user_programs/hello_world/src/: main.rs
user_programs/pipe_test/: Cargo.toml
user_programs/pipe_test/src/: main.rs
user_programs/proc0/: Cargo.toml
user_programs/proc0/src/: main.rs
user_programs/shell/: Cargo.toml
user_programs/shell/src/: main.rs
user_programs/systime_test/: Cargo.toml
user_programs/systime_test/.cargo/: config
user_programs/uname_test/: Cargo.toml
usr_hello_world_a/: Cargo.toml
usr_hello_world_a/.cargo/: config
usr_hello_world_a/src/: linker.ld  main.rs
usr_hello_world_b/: Cargo.toml
usr_hello_world_b/.cargo/: config
usr_hello_world_b/src/: main.rs
