[package]
name = "hello_world"
version = "0.1.0"
authors = ["willson0v0 <willsonlgz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oshit_usrlib = { path = "../../oshit_usrlib" }

[features]
board_qemu = []